hphp/hack/test/typecheck/unbound_name/function_pointer.php.exp
ERROR: File "function_pointer.php", line 10, characters 8-16:
Unbound name: `not_found` (a global function) (Naming[2049])
ERROR: File "function_pointer.php", line 10, characters 8-16:
Unbound name (typing): `not_found` (Typing[4107])
